<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_name" tools:ignore="MissingTranslation">Hacker\'s Keyboard</string>
    <string name="english_ime_settings" tools:ignore="MissingTranslation">Settings for Hacker\'s Keyboard</string>
    <string name="english_ime_input_options" tools:ignore="MissingTranslation">Input options</string>
    <string name="title_keyboard_view_settings" tools:ignore="MissingTranslation">Keyboard view settings</string>
    <string name="title_keyboard_height_portrait" tools:ignore="MissingTranslation">Keyboard height, portrait</string>
    <string name="title_keyboard_height_landscape" tools:ignore="MissingTranslation">Keyboard height, landscape</string>
    <string name="title_key_layout_options" tools:ignore="MissingTranslation">Key layout options</string>
    <string name="title_key_behavior_settings" tools:ignore="MissingTranslation">Key behavior settings</string>
    <string name="title_long_press_alternate_keys" tools:ignore="MissingTranslation">Long-press alternate keys</string>
    <string name="title_suggested_punctuation" tools:ignore="MissingTranslation">Suggested punctuation</string>
    <string name="title_input_mode_settings" tools:ignore="MissingTranslation">Input mode settings</string>
    <string name="title_debugging" tools:ignore="MissingTranslation">Debugging</string>
    <string name="title_input_connection_details" tools:ignore="MissingTranslation">Input connection details</string>
    <string name="title_version" tools:ignore="MissingTranslation">Version</string>
    <string name="title_swipe_gestures" tools:ignore="MissingTranslation">Swipe gestures (experimental)</string>
    <string name="title_hardware_key_actions" tools:ignore="MissingTranslation">Hardware key actions</string>
    <string name="vibrate_on_keypress" tools:ignore="MissingTranslation">Vibrate on keypress</string>
    <string name="sound_on_keypress" tools:ignore="MissingTranslation">Sound on keypress</string>
    <string name="popup_on_keypress" tools:ignore="MissingTranslation">Popup on keypress</string>
    <string name="hit_correction" tools:ignore="MissingTranslation">Correct typing errors</string>
    <string name="hit_correction_summary" tools:ignore="MissingTranslation">Enable input error correction</string>
    <string name="hit_correction_land" tools:ignore="MissingTranslation">Landscape input errors</string>
    <string name="hit_correction_land_summary" tools:ignore="MissingTranslation">Enable input error correction</string>
    <string name="auto_correction" tools:ignore="MissingTranslation">Word suggestions</string>
    <string name="auto_correction_summary" tools:ignore="MissingTranslation">Automatically correct the previous word</string>
    <string name="prediction" tools:ignore="MissingTranslation">Word suggestions</string>
    <string name="prediction_category" tools:ignore="MissingTranslation">Word suggestion settings</string>
    <string name="prediction_summary" tools:ignore="MissingTranslation">Enable auto completion while typing</string>
    <string name="auto_complete_dialog_title" tools:ignore="MissingTranslation">Auto completion</string>
    <string name="prediction_landscape" tools:ignore="MissingTranslation">Increase text field size</string>
    <string name="prediction_landscape_summary" tools:ignore="MissingTranslation">Hide word suggestions in landscape view</string>
    <string name="auto_cap" tools:ignore="MissingTranslation">Auto-capitalization</string>
    <string name="auto_cap_summary" tools:ignore="MissingTranslation">Capitalize the start of a sentence</string>
    <string name="auto_punctuate" tools:ignore="MissingTranslation">Auto-punctuate</string>
    <string name="auto_punctuate_summary" tools:ignore="MissingTranslation" />
    <string name="quick_fixes" tools:ignore="MissingTranslation">Quick fixes</string>
    <string name="quick_fixes_summary" tools:ignore="MissingTranslation">Corrects commonly typed mistakes</string>
    <string name="show_suggestions" tools:ignore="MissingTranslation">Show suggestions</string>
    <string name="show_suggestions_summary" tools:ignore="MissingTranslation">Display suggested words while typing</string>
    <string name="auto_complete" tools:ignore="MissingTranslation">Auto-complete</string>
    <string name="auto_complete_summary" tools:ignore="MissingTranslation">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="prefs_settings_key" tools:ignore="MissingTranslation">Show settings key</string>
    <string-array name="settings_key_modes_values" translatable="false">
        <item>@string/settings_key_mode_auto</item>
        <item>@string/settings_key_mode_always_show</item>
        <item>@string/settings_key_mode_always_hide</item>
    </string-array>
    <string name="settings_key_mode_auto_name" tools:ignore="MissingTranslation">Automatic</string>
    <string name="settings_key_mode_always_show_name" tools:ignore="MissingTranslation">Always show</string>
    <string name="settings_key_mode_always_hide_name" tools:ignore="MissingTranslation">Always hide</string>
    <string name="voice_input" tools:ignore="MissingTranslation">Voice input</string>
    <string name="voice_mode_symbols" translatable="false">1</string>
    <string name="language_selection_title" tools:ignore="MissingTranslation">Input languages</string>
    <string name="language_selection_summary" tools:ignore="MissingTranslation">Slide finger on spacebar to change language</string>
    <string name="prefs_enable_recorrection" tools:ignore="MissingTranslation">Touch to correct words</string>
    <string name="prefs_enable_recorrection_summary" tools:ignore="MissingTranslation">Touch entered words to correct them</string>
    <string name="pref_screen_feedback_title" tools:ignore="MissingTranslation">Key feedback settings</string>
    <string name="pref_screen_feedback_title_summary" tools:ignore="MissingTranslation">Configure key sound, vibrate, preview popup etc.</string>
    <string name="pref_screen_view_title" tools:ignore="MissingTranslation">Theme and label settings</string>
    <string name="pref_screen_view_title_summary" tools:ignore="MissingTranslation">Configure theming and label display</string>
    <string name="title_keyboard_mode_portrait" tools:ignore="MissingTranslation">Keyboard mode, portrait</string>
    <string name="title_keyboard_mode_landscape" tools:ignore="MissingTranslation">Keyboard mode, landscape</string>
    <string name="title_ctrl_a_override" tools:ignore="MissingTranslation">Ctrl-A (select all) override</string>
    <string name="default_ctrl_a_override" tools:ignore="MissingTranslation">0</string>
    <string name="title_chording_ctrl_key" tools:ignore="MissingTranslation">Ctrl key code</string>
    <string name="default_chording_ctrl_key" tools:ignore="MissingTranslation">0</string>
    <string name="title_chording_alt_key" tools:ignore="MissingTranslation">Alt key code</string>
    <string name="default_chording_alt_key" tools:ignore="MissingTranslation">0</string>
    <string name="title_chording_meta_key" tools:ignore="MissingTranslation">Meta key code</string>
    <string name="default_chording_meta_key" tools:ignore="MissingTranslation">0</string>
    <string name="title_suggestions_in_landscape" tools:ignore="MissingTranslation">Suggestions in landscape mode</string>
    <string name="summary_suggestions_in_landscape_true" tools:ignore="MissingTranslation">Same as in portrait mode</string>
    <string name="summary_suggestions_in_landscape_false" tools:ignore="MissingTranslation">Hide suggestions in landscape mode</string>
    <string name="title_fullscreen_override" tools:ignore="MissingTranslation">Landscape mode fullscreen editor</string>
    <string name="summary_fullscreen_override_true" tools:ignore="MissingTranslation">Disabled, use standard view</string>
    <string name="summary_fullscreen_override_false" tools:ignore="MissingTranslation">Enabled on small devices</string>
    <string name="title_force_keyboard_on" tools:ignore="MissingTranslation">Show soft keyboard</string>
    <string name="summary_force_keyboard_on_true" tools:ignore="MissingTranslation">Always</string>
    <string name="summary_force_keyboard_on_false" tools:ignore="MissingTranslation">When no hardware keyboard is available</string>
    <string name="title_keyboard_notification" tools:ignore="MissingTranslation">Use permanent notification</string>
    <string name="summary_keyboard_notification_true" tools:ignore="MissingTranslation">Activate the keyboard by tapping the notification</string>
    <string name="summary_keyboard_notification_false" tools:ignore="MissingTranslation">No notification</string>
    <string name="title_application_category" tools:ignore="MissingTranslation">Application-specific settings</string>
    <string name="title_connectbot_tab_hack" tools:ignore="MissingTranslation">ConnectBot tab key mode</string>
    <string name="summary_connectbot_tab_hack_true" tools:ignore="MissingTranslation">Enable compatibility workaround</string>
    <string name="summary_connectbot_tab_hack_false" tools:ignore="MissingTranslation">Send plain Tab key event</string>
    <string name="title_caps_lock" tools:ignore="MissingTranslation">Double-tap Shift mode</string>
    <string name="summary_caps_lock_true" tools:ignore="MissingTranslation">Caps Lock (q1 => Q1)</string>
    <string name="summary_caps_lock_false" tools:ignore="MissingTranslation">Shift Lock (q1 => Q!)</string>
    <string name="title_shift_lock_modifiers" tools:ignore="MissingTranslation">Apply Shift Lock to modifier keys?</string>
    <string name="summary_shift_lock_modifiers_true" tools:ignore="MissingTranslation">Yes, including arrow keys</string>
    <string name="summary_shift_lock_modifiers_false" tools:ignore="MissingTranslation">No, normal keys only</string>
    <string name="title_touch_pos" tools:ignore="MissingTranslation">Debug touch screen position</string>
    <string name="summary_touch_pos_true" tools:ignore="MissingTranslation">Show feedback for touch screen location</string>
    <string name="summary_touch_pos_false" tools:ignore="MissingTranslation">Off</string>
    <string name="title_slide_keys" tools:ignore="MissingTranslation">Sliding key events</string>
    <string name="title_vibrate_len" tools:ignore="MissingTranslation">Vibrate duration</string>
    <string name="title_click_volume" tools:ignore="MissingTranslation">Key click volume</string>
    <string name="default_click_volume" tools:ignore="MissingTranslation">0.2</string>
    <string name="title_click_method" tools:ignore="MissingTranslation">Click volume control method</string>
    <string name="default_click_method" tools:ignore="MissingTranslation">0</string>
    <string name="title_long_press_duration" tools:ignore="MissingTranslation">Long-press duration</string>
    <string name="pref_screen_actions_title" tools:ignore="MissingTranslation">Gesture and key actions</string>
    <string name="pref_screen_actions_title_summary" tools:ignore="MissingTranslation">Configure actions for swipe gestures and hardware keys</string>
    <string name="title_popup_content" tools:ignore="MissingTranslation">Popup mini-keyboard contents</string>
    <string name="default_popup_content" tools:ignore="MissingTranslation">1</string>
    <string name="main_setup_configure_imes" tools:ignore="MissingTranslation">Enable keyboard</string>
    <string name="main_setup_set_ime" tools:ignore="MissingTranslation">Set input method</string>
    <string name="main_setup_get_dicts" tools:ignore="MissingTranslation">More</string>
    <string name="main_setup_input_lang" tools:ignore="MissingTranslation">Input languages</string>
    <string name="main_setup_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="main_setup_test" tools:ignore="MissingTranslation">Test</string>
</resources>