<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hk="http://schemas.android.com/apk/res-auto"
    android:key="english_ime_settings"
    android:title="@string/english_ime_settings">

    <PreferenceCategory
        android:key="graphics_settings"
        android:title="@string/title_keyboard_view_settings">

        <org.pocketworkstation.pckeyboard.SeekBarPreferenceString
            android:defaultValue="@string/default_height_portrait"
            android:key="settings_height_portrait"
            android:persistent="true"
            android:title="@string/title_keyboard_height_portrait"
            hk:displayFormat="%.0f%%"
            hk:maxValue="75"
            hk:minValue="15"
            hk:step="1" />

        <org.pocketworkstation.pckeyboard.SeekBarPreferenceString
            android:defaultValue="@string/default_height_landscape"
            android:key="settings_height_landscape"
            android:persistent="true"
            android:title="@string/title_keyboard_height_landscape"
            hk:displayFormat="%.0f%%"
            hk:maxValue="75"
            hk:minValue="15"
            hk:step="1" />

        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:defaultValue="@string/default_keyboard_mode_portrait"
            android:entries="@array/keyboard_mode_entries"
            android:entryValues="@array/keyboard_mode_values"
            android:key="pref_keyboard_mode_portrait"
            android:persistent="true"
            android:title="@string/title_keyboard_mode_portrait" />

        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:defaultValue="@string/default_keyboard_mode_landscape"
            android:entries="@array/keyboard_mode_entries"
            android:entryValues="@array/keyboard_mode_values"
            android:key="pref_keyboard_mode_landscape"
            android:persistent="true"
            android:title="@string/title_keyboard_mode_landscape" />

        <CheckBoxPreference
            android:defaultValue="@bool/default_suggestions_in_landscape"
            android:key="suggestions_in_landscape"
            android:persistent="true"
            android:summaryOff="@string/summary_suggestions_in_landscape_false"
            android:summaryOn="@string/summary_suggestions_in_landscape_true"
            android:title="@string/title_suggestions_in_landscape" />

        <PreferenceScreen
            android:summary="@string/pref_screen_view_title_summary"
            android:title="@string/pref_screen_view_title">
            <intent android:action="org.pocketworkstation.pckeyboard.PREFS_VIEW" />
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="layout_settings"
        android:title="@string/title_key_layout_options">

        <ListPreference
            android:defaultValue="@string/settings_key_mode_auto"
            android:entries="@array/settings_key_modes"
            android:entryValues="@array/settings_key_modes_values"
            android:key="settings_key"
            android:persistent="true"
            android:title="@string/prefs_settings_key" />

        <ListPreference
            android:defaultValue="@string/voice_mode_symbols"
            android:entries="@array/voice_input_modes"
            android:entryValues="@array/voice_input_modes_values"
            android:key="voice_mode"
            android:persistent="true"
            android:title="@string/voice_input" />

        <PreferenceScreen
            android:summary="@string/language_selection_summary"
            android:title="@string/language_selection_title">
            <intent android:action="org.pocketworkstation.pckeyboard.INPUT_LANGUAGE_SELECTION" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="key_settings"
        android:title="@string/title_key_behavior_settings">

        <CheckBoxPreference
            android:defaultValue="@bool/default_auto_cap"
            android:key="auto_cap"
            android:persistent="true"
            android:title="@string/auto_cap" />

        <CheckBoxPreference
            android:defaultValue="@bool/default_caps_lock"
            android:key="pref_caps_lock"
            android:persistent="true"
            android:summaryOff="@string/summary_caps_lock_false"
            android:summaryOn="@string/summary_caps_lock_true"
            android:title="@string/title_caps_lock" />

        <CheckBoxPreference
            android:defaultValue="@bool/default_shift_lock_modifiers"
            android:key="pref_shift_lock_modifiers"
            android:persistent="true"
            android:summaryOff="@string/summary_shift_lock_modifiers_false"
            android:summaryOn="@string/summary_shift_lock_modifiers_true"
            android:title="@string/title_shift_lock_modifiers" />

        <PreferenceScreen
            android:summary="@string/pref_screen_feedback_title_summary"
            android:title="@string/pref_screen_feedback_title">
            <intent android:action="org.pocketworkstation.pckeyboard.PREFS_FEEDBACK" />
        </PreferenceScreen>

        <PreferenceScreen
            android:summary="@string/pref_screen_actions_title_summary"
            android:title="@string/pref_screen_actions_title">
            <intent android:action="org.pocketworkstation.pckeyboard.PREFS_ACTIONS" />
        </PreferenceScreen>

        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:defaultValue="@string/default_ctrl_a_override"
            android:entries="@array/ctrl_a_override_entries"
            android:entryValues="@array/ctrl_a_override_values"
            android:key="pref_ctrl_a_override"
            android:persistent="true"
            android:title="@string/title_ctrl_a_override" />

        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:defaultValue="@string/default_chording_ctrl_key"
            android:entries="@array/chording_ctrl_key_entries"
            android:entryValues="@array/chording_ctrl_key_values"
            android:key="pref_chording_ctrl_key"
            android:persistent="true"
            android:title="@string/title_chording_ctrl_key" />

        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:defaultValue="@string/default_chording_alt_key"
            android:entries="@array/chording_alt_key_entries"
            android:entryValues="@array/chording_alt_key_values"
            android:key="pref_chording_alt_key"
            android:persistent="true"
            android:title="@string/title_chording_alt_key" />

        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:defaultValue="@string/default_chording_meta_key"
            android:entries="@array/chording_meta_key_entries"
            android:entryValues="@array/chording_meta_key_values"
            android:key="pref_chording_meta_key"
            android:persistent="true"
            android:title="@string/title_chording_meta_key" />

        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:defaultValue="0"
            android:entries="@array/slide_keys_entries"
            android:entryValues="@array/slide_keys_values"
            android:key="pref_slide_keys_int"
            android:persistent="true"
            android:title="@string/title_slide_keys" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="altchar_settings"
        android:title="@string/title_long_press_alternate_keys">

        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:defaultValue="@string/default_popup_content"
            android:entries="@array/popup_content_entries"
            android:entryValues="@array/popup_content_values"
            android:key="pref_popup_content"
            android:persistent="true"
            android:title="@string/title_popup_content" />

        <org.pocketworkstation.pckeyboard.SeekBarPreferenceString
            android:defaultValue="@string/default_long_press_duration"
            android:key="pref_long_press_duration"
            android:persistent="true"
            android:title="@string/title_long_press_duration"
            hk:displayFormat="%.0f ms"
            hk:logScale="true"
            hk:maxValue="2000"
            hk:minValue="100" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="prediction_settings"
        android:title="@string/prediction_category">

        <CheckBoxPreference
            android:defaultValue="@bool/default_quick_fixes"
            android:key="quick_fixes"
            android:persistent="true"
            android:summary="@string/quick_fixes_summary"
            android:title="@string/quick_fixes" />

        <CheckBoxPreference
            android:defaultValue="@bool/default_suggestions"
            android:key="show_suggestions"
            android:persistent="true"
            android:summary="@string/show_suggestions_summary"
            android:title="@string/show_suggestions" />

        <CheckBoxPreference
            android:defaultValue="@bool/enable_autocorrect"
            android:dependency="show_suggestions"
            android:key="auto_complete"
            android:persistent="true"
            android:summary="@string/auto_complete_summary"
            android:title="@string/auto_complete" />

        <org.pocketworkstation.pckeyboard.AutoSummaryEditTextPreference
            android:defaultValue="@string/suggested_punctuations"
            android:key="pref_suggested_punctuation"
            android:title="@string/title_suggested_punctuation" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="graphics_settings"
        android:title="@string/title_input_mode_settings">

        <CheckBoxPreference
            android:defaultValue="@bool/default_recorrection_enabled"
            android:key="recorrection_enabled"
            android:persistent="true"
            android:summary="@string/prefs_enable_recorrection_summary"
            android:title="@string/prefs_enable_recorrection" />

        <CheckBoxPreference
            android:defaultValue="@bool/default_fullscreen_override"
            android:key="fullscreen_override"
            android:persistent="true"
            android:summaryOff="@string/summary_fullscreen_override_false"
            android:summaryOn="@string/summary_fullscreen_override_true"
            android:title="@string/title_fullscreen_override" />

        <CheckBoxPreference
            android:defaultValue="@bool/default_force_keyboard_on"
            android:key="force_keyboard_on"
            android:persistent="true"
            android:summaryOff="@string/summary_force_keyboard_on_false"
            android:summaryOn="@string/summary_force_keyboard_on_true"
            android:title="@string/title_force_keyboard_on" />

        <CheckBoxPreference
            android:defaultValue="@bool/default_keyboard_notification"
            android:key="keyboard_notification"
            android:persistent="true"
            android:summaryOff="@string/summary_keyboard_notification_false"
            android:summaryOn="@string/summary_keyboard_notification_true"
            android:title="@string/title_keyboard_notification" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="application_settings"
        android:title="@string/title_application_category">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="connectbot_tab_hack"
            android:persistent="true"
            android:summaryOff="@string/summary_connectbot_tab_hack_false"
            android:summaryOn="@string/summary_connectbot_tab_hack_true"
            android:title="@string/title_connectbot_tab_hack" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="debugging"
        android:title="@string/title_debugging">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_touch_pos"
            android:persistent="true"
            android:summaryOff="@string/summary_touch_pos_false"
            android:summaryOn="@string/summary_touch_pos_true"
            android:title="@string/title_touch_pos" />

        <Preference
            android:key="input_connection_info"
            android:title="@string/title_input_connection_details" />

        <Preference
            android:key="label_version"
            android:summary="@string/auto_version"
            android:title="@string/title_version" />
    </PreferenceCategory>

</PreferenceScreen>
