<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--
      <TextView android:layout_height="wrap_content" android:id="@+id/main_intro"
          android:text="@string/english_ime_name" android:layout_width="wrap_content"
          android:textStyle="bold" android:textSize="25sp"></TextView>
    -->
    <TableLayout
        android:id="@+id/main_linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:id="@+id/main_setup_btn_configure_imes"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_setup_configure_imes" />

            <Button
                android:id="@+id/main_setup_btn_input_lang"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_setup_input_lang" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/main_setup_btn_set_ime"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_setup_set_ime" />

            <Button
                android:id="@+id/main_setup_btn_get_dicts"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_setup_get_dicts" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/main_setup_btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_setup_settings" />

            <EditText
                android:id="@+id/main_setup_edit_test"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_setup_test" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/main_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
